[gd_scene load_steps=9 format=3 uid="uid://p64h4knm4tqr"]

[ext_resource type="Script" path="res://menu.gd" id="1_p6x8t"]
[ext_resource type="Texture2D" uid="uid://khiwluu65poh" path="res://asset/isian/MIDNIGHT MAZE - GAME.jpg" id="2_cxyhb"]
[ext_resource type="AudioStream" uid="uid://c0lyylvrns6il" path="res://sound/544_instrumental1_mystery-toy_0138_preview.mp3" id="3_pi7xm"]
[ext_resource type="AudioStream" uid="uid://d26puofi3566r" path="res://sound/stapler-press-47576.mp3" id="4_enjbw"]

[sub_resource type="CanvasTexture" id="CanvasTexture_4wu2c"]
diffuse_texture = ExtResource("2_cxyhb")

[sub_resource type="Animation" id="Animation_dqln4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bcl1x"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pnnx1"]
_data = {
"RESET": SubResource("Animation_dqln4"),
"fade": SubResource("Animation_bcl1x")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p6x8t")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 653.0
texture = SubResource("CanvasTexture_4wu2c")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 500.0
offset_top = 500.0
offset_right = 631.0
offset_bottom = 601.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="Tutorial" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TUTORIAL"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1176.0
offset_bottom = 666.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pnnx1")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_pi7xm")
autoplay = true

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_enjbw")
volume_db = 5.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
